hopefully homepage footer's buttons pages are finished, but most likely not

--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -2019,6 +2019,7 @@ button.disabled {
     border: none;
     display: flex;
     text-transform: uppercase;
+    text-decoration: none;
 }
 
 .home .footer .wrap .payment-methods {
