--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -887,6 +887,7 @@ button.disabled {
     border: none;
     display: flex;
     text-transform: uppercase;
+    text-decoration: none;
 }
 
 .home .footer .wrap .payment-methods {
