--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -2028,6 +2028,12 @@ button.disabled {
     z-index: 1;
 }
 
+.home .footer .payment-methods .link {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+}
+
 .home .footer .wrap .logo + .logo {
     margin-left: 10px;
 }
