--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -8292,11 +8292,17 @@ button.disabled {
 .admin-panel .calendar .current-date .year {
     color: rgba(255, 255, 255, .6);
     position: relative;
+    display: flex;
 }
 
 .admin-panel .calendar .current-date .year .active-year {
     cursor: pointer;
     transition: 200ms;
+    display: flex;
+}
+
+.admin-panel .calendar .current-date .year .hours-minutes {
+    cursor: pointer;
 }
 
 .admin-panel .calendar .choose-date-body .year {
@@ -8351,6 +8357,42 @@ button.disabled {
     width: 100%;
     height: 100%;
     padding: 15px 20px;
+    transition: 300ms;
+}
+
+.admin-panel .calendar .choose-date-body .hours-mins-choosing {
+    transition: 300ms;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+}
+
+.admin-panel .calendar .choose-date-body .hours-mins-choosing .active-time {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.admin-panel .calendar .choose-date-body .hours-mins-choosing .arrow {
+    display: flex;
+    align-items: flex-end;
+    transform: rotate(90deg);
+    cursor: pointer;
+    transition: 300ms;
+}
+
+.admin-panel .calendar .choose-date-body .hours-mins-choosing .arrow path {
+    pointer-events: none;
+}
+
+.admin-panel .calendar .choose-date-body .hours-mins-choosing .back {
+    transform: rotate(-90deg);
+}
+
+.admin-panel .calendar .choose-date-body .hours-mins-choosing .arrow:hover {
+    opacity: .6;
 }
 
 .admin-panel .calendar .current-date .day {
