--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -531,6 +531,13 @@ button.disabled {
     display: block;
 }
 
+@media (max-width: 1270px) {
+    .home .slick-slider .slider .link-to {
+        display: flex;
+        justify-content: center;
+    }
+}
+
 .home .slider .pop-product .pop-product-blackBG {
     position: absolute;
     left: 0;
@@ -867,6 +874,21 @@ button.disabled {
     justify-content: space-between;
     align-items: center;
     padding: 15px;
+}
+
+@media (max-width: 1150px) {
+    .home .footer .wrap {
+        flex-direction: column;
+    }
+    .home .footer .wrap .modal-buttons {
+        width: 90%;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .home .footer .wrap .payment-methods {
+        width: 90%;
+        justify-content: space-between;
+    }
 }
 
 .home .footer .modal-buttons {
@@ -2322,6 +2344,7 @@ button.disabled {
     line-height: 16px;
     letter-spacing: .1px;
     text-align: center;
+    width: 100px;
 }
 
 .info .product .general .description h4 {
